conda init powershell

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,9 @@ jobs:
   - powershell: Write-Host "##vso[task.prependpath]$env:CONDA\Scripts"
     displayName: Add conda to PATH
 
-  - script: conda create --yes --quiet --name chihiro
+  - script: |
+      conda create --yes --quiet --name chihiro
+      conda init powershell
     displayName: Create Anaconda environment
 
   - script: |
