--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,13 +24,15 @@ jobs:
   - powershell: |
       Write-Host "Agent name $Env:AGENT_NAME."
       Write-Host "Path variable is $Env:Path."
+      ls $env:CONDA\etc\profile.d\ | Out-String | Write-Host
+      Write-Host "boop"
       gci env:* | sort-object name | Out-String | Write-Host
     displayName: print PATH1
 
-  - powershell: |
-      . $env:CONDAPS1 chihiro
-      Write-Host "Agent name $Env:AGENT_NAME."
-      Write-Host "Path variable is $Env:Path."
-      gci env:* | sort-object name | Out-String | Write-Host
-    displayName: print PATH2
+  # - powershell: |
+  #     . $env:CONDAPS1 chihiro
+  #     Write-Host "Agent name $Env:AGENT_NAME."
+  #     Write-Host "Path variable is $Env:Path."
+  #     gci env:* | sort-object name | Out-String | Write-Host
+  #   displayName: print PATH2
 
