let's try sourcing conda-hook.ps1

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,10 +29,11 @@ jobs:
       gci env:* | sort-object name | Out-String | Write-Host
     displayName: print PATH1
 
-  # - powershell: |
-  #     . $env:CONDAPS1 chihiro
-  #     Write-Host "Agent name $Env:AGENT_NAME."
-  #     Write-Host "Path variable is $Env:Path."
-  #     gci env:* | sort-object name | Out-String | Write-Host
-  #   displayName: print PATH2
+  - powershell: |
+      . $env:CONDA\shell\condabin\conda-hook.ps1
+      conda activate chihiro
+      Write-Host "Agent name $Env:AGENT_NAME."
+      Write-Host "Path variable is $Env:Path."
+      gci env:* | sort-object name | Out-String | Write-Host
+    displayName: print PATH2
 
